# DocumentIngestionPipeline

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  test_milvis.py  worker.py
html/: app.html
ingestion/: index.py  server.py  steps.py  workflows.py
pytest/docling/: notebook.ipynb
pytest/llamaindex-milvus/: notebook.ipynb
